fix: try to fix auto zoom on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,8 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+html,
+body {
+  touch-action: manipulation;
+}
